# email-triage-env

email-triage-env/: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
email-triage-env/data/: emails.json
email-triage-env/env/: __init__.py  email_generator.py  environment.py  graders.py  models.py  reward.py
email-triage-env/server/: __init__.py  app.py
email-triage-env/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
email-triage-env/tests/: test_env.py
