[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Real-world email triage OpenEnv environment for training and evaluating AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "your-hf-username" }
]
dependencies = [
  "openenv>=0.1.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "openai>=1.12.0",
  "pydantic>=2.0.0",
  "pytest>=7.0.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["env*", "tasks*", "server*"]
